2008-02-14:
	* src/password.c,src/prompter.c: suppress compiler warnings about how
	we use prompter callback data.

2008-02-14:
	* src/sly.c: suppress a compiler warning calling tf_init().

2008-02-14:
	* src/minikafs.c: rework formatting of tokens to use indirections
	provided by v5.c instead of poking at creds structures directly

2008-02-14:
	* src/v5.c,src/v5.h(v5_creds_get_etype): remove the need for the
	context pointer.
	* src/v5.c,src/v5.h(v5_creds_key_contents): return const data.
	* src/v5.c,src/v5.h: add functions for picking out principal name
	components and addresses and authdata from creds structures.
	* src/v5.c(v5_principal_compare): rewrite to use these new functions.
	* src/v5.c(v5_get_creds): correctly log the pkinit identity template.

2008-02-14:
	* src/tokens.c,src/afs5log.c: only recognize "v4" and "524" strategies
	if we're building with krb4 support.

2008-02-14:
	* src/options.c: when we're debug-logging lifetimes, also log a
	days/hours/minutes/seconds breakdown.

2008-02-07:
	* README,configure.ac,src/options.c,src/tokens.c,src/afs5log.c,
	src/afs5log.1.in,src/pam_krb5.5.in: add a "token_strategy" option
	to pam_krb5, and a matching "-s" option to afs5log.  That, in
	combination being able to specify the best guess at the principal name
	for a cell, should really let people cut down on what's getting to be
	a large set of round trips to the KDC.

2008-02-07:
	* configure.ac: get the sense of --enable-keyutils right, so that we
	warn when it's not requested, and error when it's requested, instead
	of the other way around.
	* src/afs5log.c: reorder the default list of methods, close the ccache
	properly, and free the temporary homedir string for debugging use.
	* src/minikafs.c(minikafs_5settoken2): add, to set a v5 cred.
	* src/minikafs.c(minikafs_5log,minikafs_5log_with_principal): take a
	flag to signal that we should try rxk5, and use it and the 2b flag to
	designate which method we want to use (no longer trying more than one